--- a/FCI/ui/fci_01_main.ui
+++ b/FCI/ui/fci_01_main.ui
@@ -39,7 +39,7 @@
      <property name="geometry">
       <rect>
        <x>70</x>
-       <y>290</y>
+       <y>180</y>
        <width>281</width>
        <height>151</height>
       </rect>
@@ -59,8 +59,8 @@
     <widget class="QPushButton" name="pushButton_3">
      <property name="geometry">
       <rect>
-       <x>900</x>
-       <y>290</y>
+       <x>890</x>
+       <y>190</y>
        <width>321</width>
        <height>151</height>
       </rect>
@@ -80,8 +80,8 @@
     <widget class="QPushButton" name="pushButton_4">
      <property name="geometry">
       <rect>
-       <x>480</x>
-       <y>290</y>
+       <x>460</x>
+       <y>190</y>
        <width>321</width>
        <height>151</height>
       </rect>
@@ -95,14 +95,14 @@
       </font>
      </property>
      <property name="text">
-      <string>Batches/Issues</string>
+      <string>Batches   /   Issues</string>
      </property>
     </widget>
     <widget class="QLabel" name="label">
      <property name="geometry">
       <rect>
-       <x>340</x>
-       <y>50</y>
+       <x>350</x>
+       <y>30</y>
        <width>551</width>
        <height>91</height>
       </rect>
@@ -218,6 +218,27 @@
      </property>
      <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_6">
+     <property name="geometry">
+      <rect>
+       <x>70</x>
+       <y>410</y>
+       <width>291</width>
+       <height>151</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>MS Sans Serif</family>
+       <pointsize>18</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>Reports</string>
      </property>
     </widget>
    </widget>
