--- a/FCI/ui/fci_02_Batches.ui
+++ b/FCI/ui/fci_02_Batches.ui
@@ -23,10 +23,10 @@
    <widget class="QFrame" name="frame">
     <property name="geometry">
      <rect>
-      <x>30</x>
+      <x>20</x>
       <y>10</y>
       <width>1311</width>
-      <height>681</height>
+      <height>701</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -40,8 +40,8 @@
       <rect>
        <x>10</x>
        <y>10</y>
-       <width>261</width>
-       <height>71</height>
+       <width>231</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
@@ -62,9 +62,9 @@
     <widget class="QLabel" name="label_20">
      <property name="geometry">
       <rect>
-       <x>1020</x>
-       <y>20</y>
-       <width>251</width>
+       <x>1140</x>
+       <y>10</y>
+       <width>161</width>
        <height>31</height>
       </rect>
      </property>
@@ -90,7 +90,7 @@
     <widget class="QPushButton" name="pushButton">
      <property name="geometry">
       <rect>
-       <x>50</x>
+       <x>30</x>
        <y>80</y>
        <width>91</width>
        <height>41</height>
@@ -108,7 +108,7 @@
     <widget class="QPushButton" name="pushButton_2">
      <property name="geometry">
       <rect>
-       <x>200</x>
+       <x>170</x>
        <y>80</y>
        <width>91</width>
        <height>41</height>
@@ -126,7 +126,7 @@
     <widget class="QPushButton" name="pushButton_3">
      <property name="geometry">
       <rect>
-       <x>340</x>
+       <x>300</x>
        <y>80</y>
        <width>91</width>
        <height>41</height>
@@ -144,10 +144,10 @@
     <widget class="QTableWidget" name="tableWidget">
      <property name="geometry">
       <rect>
-       <x>50</x>
+       <x>30</x>
        <y>140</y>
        <width>581</width>
-       <height>491</height>
+       <height>511</height>
       </rect>
      </property>
      <row>
@@ -214,10 +214,10 @@
     <widget class="QLabel" name="label_21">
      <property name="geometry">
       <rect>
-       <x>530</x>
-       <y>30</y>
-       <width>261</width>
-       <height>31</height>
+       <x>500</x>
+       <y>40</y>
+       <width>331</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="font">
@@ -230,7 +230,7 @@
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">color: rgb(0, 0, 255);</string>
+      <string notr="true">color: rgb(255, 0, 0);</string>
      </property>
      <property name="text">
       <string>Please select the record to Edit.</string>
@@ -243,14 +243,14 @@
      <property name="geometry">
       <rect>
        <x>690</x>
-       <y>140</y>
+       <y>150</y>
        <width>111</width>
        <height>31</height>
       </rect>
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -278,7 +278,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -306,7 +306,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -328,13 +328,13 @@
       <rect>
        <x>690</x>
        <y>310</y>
-       <width>181</width>
+       <width>111</width>
        <height>31</height>
       </rect>
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -362,7 +362,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -373,7 +373,7 @@
       <string notr="true">color: rgb(0, 0, 255);</string>
      </property>
      <property name="text">
-      <string>No. Bags :</string>
+      <string>Expected. Bags Count :</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -390,7 +390,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -401,7 +401,7 @@
       <string notr="true">color: rgb(0, 0, 255);</string>
      </property>
      <property name="text">
-      <string>Available Trucks :</string>
+      <string>Accpted Loss|(%) :</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -418,7 +418,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -439,7 +439,7 @@
      <property name="geometry">
       <rect>
        <x>900</x>
-       <y>140</y>
+       <y>150</y>
        <width>91</width>
        <height>31</height>
       </rect>
@@ -481,7 +481,7 @@
      <property name="geometry">
       <rect>
        <x>900</x>
-       <y>260</y>
+       <y>250</y>
        <width>101</width>
        <height>31</height>
       </rect>
@@ -542,7 +542,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -553,7 +553,7 @@
       <string notr="true">color: rgb(0, 0, 255);</string>
      </property>
      <property name="text">
-      <string>Net. Weight :</string>
+      <string>Net. Weight(Kg) :</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -592,7 +592,7 @@
       </font>
      </property>
      <property name="text">
-      <string>100</string>
+      <string>0.01</string>
      </property>
     </widget>
     <widget class="QComboBox" name="comboBox">
@@ -628,8 +628,8 @@
     <widget class="QPushButton" name="pushButton_4">
      <property name="geometry">
       <rect>
-       <x>730</x>
-       <y>620</y>
+       <x>690</x>
+       <y>650</y>
        <width>91</width>
        <height>31</height>
       </rect>
@@ -646,8 +646,8 @@
     <widget class="QPushButton" name="pushButton_5">
      <property name="geometry">
       <rect>
-       <x>870</x>
-       <y>620</y>
+       <x>830</x>
+       <y>650</y>
        <width>91</width>
        <height>31</height>
       </rect>
@@ -682,7 +682,7 @@
     <widget class="QPushButton" name="pushButton_6">
      <property name="geometry">
       <rect>
-       <x>1170</x>
+       <x>1190</x>
        <y>70</y>
        <width>91</width>
        <height>41</height>
@@ -719,6 +719,192 @@
      </property>
      <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_4">
+     <property name="geometry">
+      <rect>
+       <x>1020</x>
+       <y>490</y>
+       <width>91</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(170, 85, 127);</string>
+     </property>
+     <property name="text">
+      <string>100 kg</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_30">
+     <property name="geometry">
+      <rect>
+       <x>1020</x>
+       <y>250</y>
+       <width>141</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>MS Shell Dlg 2</family>
+       <pointsize>10</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+       <underline>false</underline>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(0, 0, 255);</string>
+     </property>
+     <property name="text">
+      <string>Shortage of  Bags :</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit_8">
+     <property name="geometry">
+      <rect>
+       <x>1190</x>
+       <y>250</y>
+       <width>101</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>5000</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_31">
+     <property name="geometry">
+      <rect>
+       <x>1020</x>
+       <y>200</y>
+       <width>161</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>MS Shell Dlg 2</family>
+       <pointsize>10</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+       <underline>false</underline>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(0, 0, 255);</string>
+     </property>
+     <property name="text">
+      <string>Accepted. Bags Count :</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit_9">
+     <property name="geometry">
+      <rect>
+       <x>1190</x>
+       <y>200</y>
+       <width>101</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>5000</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_32">
+     <property name="geometry">
+      <rect>
+       <x>1030</x>
+       <y>300</y>
+       <width>111</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>MS Shell Dlg 2</family>
+       <pointsize>10</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+       <underline>false</underline>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(0, 0, 255);</string>
+     </property>
+     <property name="text">
+      <string>Avg. Bag. Wt :</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_5">
+     <property name="geometry">
+      <rect>
+       <x>1190</x>
+       <y>300</y>
+       <width>91</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(170, 85, 127);</string>
+     </property>
+     <property name="text">
+      <string>100 kg</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_7">
+     <property name="geometry">
+      <rect>
+       <x>960</x>
+       <y>650</y>
+       <width>231</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Batch Quantity Details</string>
      </property>
     </widget>
    </widget>
