--- a/FCI/ui/fci_03_weighing.ui
+++ b/FCI/ui/fci_03_weighing.ui
@@ -23,7 +23,7 @@
    <widget class="QFrame" name="frame">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>20</x>
       <y>10</y>
       <width>1321</width>
       <height>701</height>
@@ -46,7 +46,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
       </font>
      </property>
@@ -65,7 +65,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
       </font>
      </property>
@@ -81,7 +81,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
       </font>
      </property>
@@ -100,7 +100,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
       </font>
      </property>
@@ -119,7 +119,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
       </font>
      </property>
@@ -138,7 +138,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -166,7 +166,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -194,7 +194,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
       </font>
      </property>
@@ -241,7 +241,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
       </font>
      </property>
@@ -452,7 +452,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -480,7 +480,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -640,7 +640,7 @@
     <widget class="QLabel" name="label_25">
      <property name="geometry">
       <rect>
-       <x>460</x>
+       <x>470</x>
        <y>60</y>
        <width>111</width>
        <height>31</height>
@@ -648,7 +648,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -676,7 +676,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -704,7 +704,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -732,7 +732,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -773,7 +773,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -801,7 +801,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -829,7 +829,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -857,7 +857,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -885,7 +885,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -913,7 +913,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -941,7 +941,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -969,7 +969,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -997,7 +997,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -1025,7 +1025,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -1053,7 +1053,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -1081,7 +1081,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -1282,7 +1282,7 @@ font: 24pt &quot;MS Shell Dlg 2&quot;;</string>
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -1310,7 +1310,7 @@ font: 24pt &quot;MS Shell Dlg 2&quot;;</string>
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -1594,7 +1594,7 @@ font: 24pt &quot;MS Shell Dlg 2&quot;;</string>
       <string>IN</string>
      </property>
      <property name="checked">
-      <bool>true</bool>
+      <bool>false</bool>
      </property>
     </widget>
     <widget class="QRadioButton" name="radioButton_4">
@@ -1608,6 +1608,35 @@ font: 24pt &quot;MS Shell Dlg 2&quot;;</string>
      </property>
      <property name="text">
       <string>OUT</string>
+     </property>
+    </widget>
+    <widget class="QRadioButton" name="radioButton_5">
+     <property name="geometry">
+      <rect>
+       <x>250</x>
+       <y>10</y>
+       <width>82</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Batch </string>
+     </property>
+     <property name="checked">
+      <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QRadioButton" name="radioButton_6">
+     <property name="geometry">
+      <rect>
+       <x>350</x>
+       <y>10</y>
+       <width>82</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Issue</string>
      </property>
     </widget>
    </widget>
