--- a/FCI/ui/fci_04_batch_issues_submenu.ui
+++ b/FCI/ui/fci_04_batch_issues_submenu.ui
@@ -38,22 +38,19 @@
     <widget class="QPushButton" name="pushButton">
      <property name="geometry">
       <rect>
-       <x>210</x>
+       <x>150</x>
        <y>230</y>
-       <width>281</width>
-       <height>151</height>
+       <width>341</width>
+       <height>211</height>
       </rect>
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
-       <pointsize>18</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
+       <pointsize>22</pointsize>
       </font>
      </property>
      <property name="text">
-      <string>Batches /Recipts</string>
+      <string>Batches</string>
      </property>
     </widget>
     <widget class="QPushButton" name="pushButton_4">
@@ -62,13 +59,13 @@
        <x>640</x>
        <y>230</y>
        <width>321</width>
-       <height>151</height>
+       <height>211</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <family>MS Sans Serif</family>
-       <pointsize>18</pointsize>
+       <pointsize>22</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
@@ -108,8 +105,8 @@
     <widget class="QPushButton" name="pushButton_2">
      <property name="geometry">
       <rect>
-       <x>540</x>
-       <y>500</y>
+       <x>1040</x>
+       <y>590</y>
        <width>101</width>
        <height>31</height>
       </rect>
