--- a/FCI/ui/fci_12_issue_report.ui
+++ b/FCI/ui/fci_12_issue_report.ui
@@ -128,17 +128,17 @@
      </column>
      <column>
       <property name="text">
-       <string>Release Order Type</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>Truck RTO No.</string>
+       <string>RO Type</string>
       </property>
      </column>
      <column>
       <property name="text">
        <string>Truck Sr. No.</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Truck RTO No.</string>
       </property>
      </column>
      <column>
