--- a/FCI/ui/fci_08_reports_submenu.ui
+++ b/FCI/ui/fci_08_reports_submenu.ui
@@ -50,7 +50,7 @@
       </font>
      </property>
      <property name="text">
-      <string>Batch Report</string>
+      <string>Batches Report</string>
      </property>
     </widget>
     <widget class="QPushButton" name="pushButton_4">
@@ -66,8 +66,8 @@
       <font>
        <family>MS Sans Serif</family>
        <pointsize>22</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
+       <weight>50</weight>
+       <bold>false</bold>
       </font>
      </property>
      <property name="text">
