--- a/FCI/ui/fci_01_main.ui
+++ b/FCI/ui/fci_01_main.ui
@@ -25,9 +25,12 @@
      <rect>
       <x>30</x>
       <y>30</y>
-      <width>1311</width>
-      <height>681</height>
+      <width>1291</width>
+      <height>671</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(216, 255, 201);</string>
     </property>
     <property name="frameShape">
      <enum>QFrame::StyledPanel</enum>
@@ -38,15 +41,15 @@
     <widget class="QPushButton" name="pushButton">
      <property name="geometry">
       <rect>
-       <x>70</x>
+       <x>110</x>
        <y>180</y>
-       <width>281</width>
-       <height>151</height>
+       <width>211</width>
+       <height>121</height>
       </rect>
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>18</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -59,51 +62,51 @@
     <widget class="QPushButton" name="pushButton_3">
      <property name="geometry">
       <rect>
-       <x>890</x>
-       <y>190</y>
-       <width>321</width>
-       <height>151</height>
+       <x>870</x>
+       <y>400</y>
+       <width>211</width>
+       <height>121</height>
       </rect>
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>18</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
      </property>
      <property name="text">
-      <string>Administration</string>
+      <string>Admin.</string>
      </property>
     </widget>
     <widget class="QPushButton" name="pushButton_4">
      <property name="geometry">
       <rect>
-       <x>460</x>
-       <y>190</y>
-       <width>321</width>
-       <height>151</height>
+       <x>490</x>
+       <y>180</y>
+       <width>211</width>
+       <height>121</height>
       </rect>
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>18</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
      </property>
      <property name="text">
-      <string>Batches   /   Issues</string>
+      <string>Batches </string>
      </property>
     </widget>
     <widget class="QLabel" name="label">
      <property name="geometry">
       <rect>
-       <x>350</x>
+       <x>290</x>
        <y>30</y>
-       <width>551</width>
+       <width>721</width>
        <height>91</height>
       </rect>
      </property>
@@ -116,7 +119,7 @@
       <string notr="true">color: rgb(170, 85, 127);</string>
      </property>
      <property name="text">
-      <string>Goods Management System</string>
+      <string>Material Handling and Management System 1.0</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
@@ -133,7 +136,7 @@
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -153,15 +156,15 @@
     <widget class="QPushButton" name="pushButton_2">
      <property name="geometry">
       <rect>
-       <x>790</x>
-       <y>630</y>
+       <x>760</x>
+       <y>600</y>
        <width>101</width>
        <height>31</height>
       </rect>
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>50</weight>
        <bold>false</bold>
@@ -174,15 +177,15 @@
     <widget class="QPushButton" name="pushButton_5">
      <property name="geometry">
       <rect>
-       <x>930</x>
-       <y>630</y>
+       <x>910</x>
+       <y>600</y>
        <width>91</width>
        <height>31</height>
       </rect>
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>50</weight>
        <bold>false</bold>
@@ -195,15 +198,15 @@
     <widget class="QLabel" name="label_21">
      <property name="geometry">
       <rect>
-       <x>1080</x>
-       <y>620</y>
+       <x>1050</x>
+       <y>590</y>
        <width>171</width>
        <height>41</height>
       </rect>
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -223,15 +226,15 @@
     <widget class="QPushButton" name="pushButton_6">
      <property name="geometry">
       <rect>
-       <x>70</x>
-       <y>410</y>
-       <width>291</width>
-       <height>151</height>
+       <x>110</x>
+       <y>400</y>
+       <width>211</width>
+       <height>121</height>
       </rect>
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>MS Shell Dlg 2</family>
        <pointsize>18</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -239,6 +242,92 @@
      </property>
      <property name="text">
       <string>Reports</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_7">
+     <property name="geometry">
+      <rect>
+       <x>870</x>
+       <y>180</y>
+       <width>211</width>
+       <height>121</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>MS Shell Dlg 2</family>
+       <pointsize>18</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>Issues</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_9">
+     <property name="geometry">
+      <rect>
+       <x>490</x>
+       <y>400</y>
+       <width>211</width>
+       <height>121</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>MS Shell Dlg 2</family>
+       <pointsize>18</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>Online Status</string>
+     </property>
+    </widget>
+    <widget class="QToolButton" name="toolButton">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>20</y>
+       <width>21</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(0, 170, 0);</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_22">
+     <property name="geometry">
+      <rect>
+       <x>60</x>
+       <y>20</y>
+       <width>61</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>MS Shell Dlg 2</family>
+       <pointsize>8</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+       <underline>false</underline>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(0, 0, 255);</string>
+     </property>
+     <property name="text">
+      <string>Online</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
      </property>
     </widget>
    </widget>
