--- a/FCI/ui/fci_01_main.ui
+++ b/FCI/ui/fci_01_main.ui
@@ -30,7 +30,7 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(216, 255, 201);</string>
+     <string notr="true"/>
     </property>
     <property name="frameShape">
      <enum>QFrame::StyledPanel</enum>
@@ -119,7 +119,7 @@
       <string notr="true">color: rgb(170, 85, 127);</string>
      </property>
      <property name="text">
-      <string>Material Handling and Management System 1.0</string>
+      <string>Material Handling and Transport System 1.0</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
